--- a/src/index.css
+++ b/src/index.css
@@ -265,3 +265,20 @@ input {
 .horizontal-card-reviews {
   margin-top: 10px;
 }
+
+.create-new-place-container {
+  background-color: #eeeeee; 
+  padding: 20px;
+  margin: 10px auto; 
+  width: 80%; 
+  max-width: 900px;
+  text-align: center;
+}
+
+.create-new-place-container textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px; 
+}
