--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,8 @@ section {
 
 /* Дополнительные стили для адаптации размеров и других элементов */
 
-input {
+/* Search input */
+.search {
   position: absolute;
   top: 150px;
   /* top: 30%; */
